# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "grokcore.component"
version = "5.2.dev0"
description = "Grok-like configuration for basic components (adapters, utilities, subscribers)"
license = "ZPL-2.1"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 6 - Mature",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Grok Team",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "martian >= 1.2",
    "zope.component",
    "zope.configuration",
    "zope.interface",
    "zope.testing",
]

[project.optional-dependencies]
test = ["zope.event"]

[project.urls]
Source = "https://github.com/zopefoundation/grokcore.component"
Issues = "https://github.com/zopefoundation/grokcore.component/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/grokcore.component/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["grokcore.component"]

[tool.coverage.report]
fail_under = 96
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}
